# danswer

./: .python-version  pyproject.toml
.github/: dependabot.yml
backend/requirements/: default.txt  dev.txt
