[tool.poetry]
name = "danswer"
version = "0.1.0"
description = ""
authors = ["Geislor Crestani <geislor.crestani@dock.tech>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "3.9.4"
alembic = "1.10.4"
asyncpg = "0.27.0"
atlassian-python-api = "3.37.0"
beautifulsoup4 = "4.12.2"
boto3 = "1.34.84"
celery = "5.3.4"
chardet = "5.2.0"
dask = "2023.8.1"
ddtrace = "2.9.2"
distributed = "2023.8.1"
fastapi = "0.109.2"
fastapi-users = "12.1.3"
fastapi-users-db-sqlalchemy = "5.0.0"
filelock = "3.12.0"
google-api-python-client = "2.86.0"
google-auth-httplib2 = "0.1.0"
google-auth-oauthlib = "1.0.0"
httpcore = "0.16.3"
httpx = {version = "0.23.3", extras = ["http2"]}
httpx-oauth = "0.11.2"
huggingface-hub = "0.20.1"
jira = "3.5.1"
jsonref = "1.1.0"
langchain = "0.1.17"
langchain-community = "0.0.36"
langchain-core = "0.1.50"
langchain-text-splitters = "0.0.1"
litellm = "1.37.7"
llama-index = "0.9.45"
mako = "1.2.4"
msal = "1.26.0"
nltk = "3.8.1"
office365-rest-python-client = "2.5.11"
oauthlib = "3.2.2"
openai = "1.14.3"
openpyxl = "3.1.2"
playwright = "1.41.2"
psutil = "5.9.5"
psycopg2-binary = "2.9.9"
pycryptodome = "3.19.1"
pydantic = "1.10.13"
pygithub = "1.58.2"
python-dateutil = "2.8.2"
python-gitlab = "3.9.0"
python-pptx = "0.6.23"
pypdf = "3.17.0"
pytest-mock = "3.12.0"
pytest-playwright = "0.3.2"
python-docx = "1.1.2"
python-dotenv = "1.0.0"
python-multipart = "0.0.7"
pywikibot = "9.0.0"
requests = "2.32.2"
requests-oauthlib = "1.3.1"
retry = "0.9.2"
rfc3986 = "1.5.0"
rt = "3.1.4"
simple-salesforce = "1.12.6"
slack-sdk = "3.20.2"
sqlalchemy = {version = "2.0.31", extras = ["mypy"]}
starlette = "0.36.3"
supervisor = "4.2.5"
tiktoken = "0.4.0"
timeago = "1.0.16"
transformers = "4.39.2"
uvicorn = "0.21.1"
zulip = "0.9.0"
hubspot-api-client = "8.1.0"
zenpy = "2.0.49"
dropbox = "11.36.2"
aws-cdk-lib = ">=2.0.0"
python3-saml = "1.15.0"
h5py = "3.9.0"
safetensors = "0.4.2"
sentence-transformers = "2.6.1"
torch = "2.0.1"


[tool.poetry.group.dev.dependencies]
black = "24.3.0"
celery-types = "0.19.0"
mypy-extensions = "1.0.0"
mypy = "1.10.1"
pre-commit = "3.2.2"
reorder-python-imports = "3.9.0"
ruff = "0.5.1"
types-pyyaml = "6.0.12.11"
types-beautifulsoup4 = "4.12.0.3"
types-html5lib = "1.1.11.13"
types-oauthlib = "3.2.0.20240217"
types-setuptools = "68.0.0.3"
types-passlib = "1.7.7.20240106"
types-psutil = "5.9.5.17"
types-psycopg2 = "2.9.21.10"
types-python-dateutil = "2.8.19.13"
types-pytz = "2023.3.1.1"
types-regex = "2023.3.23.1"
types-requests = "2.28.11.17"
types-retry = "0.9.9.4"
types-urllib3 = "1.26.25.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
